--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Tracy Parker | Artist | Photographer | Fractal Explorer</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Lobster|Changa+One|Open+Sans:400,700,400italic,700italic,800' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="CSS/main.css">
-    <link rel="stylesheet" href="CSS/responsive.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
