--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Tracy Parker | Artist | Photographer | Fractal Explorer | Designer</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Lobster|Changa+One|Open+Sans:400,700,400italic,700italic,800' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -25,8 +25,8 @@
     </header>
     <div id="wrapper">
        <center>
-         <img src="img/Me.jpg" class="profile-photo">
-         <img src="img/heartscrollswirlybanner_1.jpg" class="scroll-work">
+         <img src="IMG/Me.jpg" class="profile-photo">
+         <img src="IMG/heartscrollswirlybanner_1.jpg" class="scroll-work">
         <h3>General Information</h3>
       </center>
         <p>I'm not currently set up for sales on this site. All of my available photo and fractal prints can be purchased through my <a href="http://strawberryburns.deviantart.com/">Deviantart.com</a> page.</p>
@@ -37,16 +37,16 @@
        </center>   
         <p> The best way to reach me is via email at <a href="mailto:stp.web.dev@gmail.com">stp.web.dev@gmail.com</a> You can also connect with me on various social media sites by clicking on any one of the social media buttons I've provided at the bottom of all the pages on this site.</p>
        <center>
-         <img src="img/heartscrollswirlybanner_2.jpg" class="scroll-work-bottom">
+         <img src="IMG/heartscrollswirlybanner_2.jpg" class="scroll-work-bottom">
        </center>  
        
-        <a href="#" class="toTop"><img src="img/rb-back-to-top-32.png" alt="Back To Top"></a>
+        <a href="#" class="toTop"><img src="IMG/rb-back-to-top-32.png" alt="Back To Top"></a>
       
       <footer>
-        <a href="https://www.facebook.com/StrawberryBurns"><img src="img/facebook_32.png" alt="Facebook Logo" class="social-icon"></a>
-        <a href="http://strawberryburns.deviantart.com/"><img src="img/deviantart_32.png" alt="Deviantart Logo" class="social-icon"></a>
-        <a href="https://twitter.com/StrawberryBurns"><img src="img/twitter_32.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://strawberryburns.tumblr.com/"><img src="img/tumblr_32.png" alt="Tumblr Logo" class="social-icon"></a>
+        <a href="https://www.facebook.com/StrawberryBurns"><img src="IMG/facebook_32.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="http://strawberryburns.deviantart.com/"><img src="IMG/deviantart_32.png" alt="Deviantart Logo" class="social-icon"></a>
+        <a href="https://twitter.com/StrawberryBurns"><img src="IMG/twitter_32.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://strawberryburns.tumblr.com/"><img src="IMG/tumblr_32.png" alt="Tumblr Logo" class="social-icon"></a>
         <p>&copy; 2015 Tracy Parker.</p>
       </footer>
     </div>
