--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tracy Parker | Artist | Photographer | Fractal Explorer</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Lobster|Changa+One|Open+Sans:400,700,400italic,700italic,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/responsive.css">
@@ -32,54 +32,54 @@
         </center>
         <ul id="gallery">
           <li>
-            <a href="img/Fake-Roses-Cocktail-Ad.jpg">
-              <img src="img/Fake-Roses-Cocktail-Ad.jpg" alt="Fake ad I did for 'Roses Cocktail Infusions' as a Commercial Art student at JCTC in 2008. It took first place in the color photography division of the student show that semester.">
+            <a href="IMG/Fake-Roses-Cocktail-Ad.jpg">
+              <img src="IMG/Fake-Roses-Cocktail-Ad.jpg" alt="Fake ad I did for 'Roses Cocktail Infusions' as a Commercial Art student at JCTC in 2008. It took first place in the color photography division of the student show that semester.">
               <p>Fake ad I did for "Rose's Cocktail Infusions" as a Commercial Art student at JCTC in 2008. It took first place in the color photography division of the student show that semester. </p>
             </a> 
           </li>
           <li>
-            <a href="img/Sun-Warrior.jpg">
-              <img src="img/Sun-Warrior.jpg" alt="'Sun Warrior'. My first published fractal image. It appeared in the April 2012 issue of Pure Uncut Candy.">
+            <a href="IMG/Sun-Warrior.jpg">
+              <img src="IMG/Sun-Warrior.jpg" alt="'Sun Warrior'. My first published fractal image. It appeared in the April 2012 issue of Pure Uncut Candy.">
               <p>"Sun Warrior". My first published fractal image. It appeared in the April 2012 issue of Pure Uncut Candy.</p>
             </a> 
           </li>
           <li>
-            <a href="img/Spring-Theory-Plate.jpg">
-              <img src="img/Spring-Theory-Plate.jpg" alt="'Spring Theory'. This spring etched, glazed stoneware dinner plate, is an example of my wheel thrown work.">
+            <a href="IMG/Spring-Theory-Plate.jpg">
+              <img src="IMG/Spring-Theory-Plate.jpg" alt="'Spring Theory'. This spring etched, glazed stoneware dinner plate, is an example of my wheel thrown work.">
               <p>"Spring Theory". This spring etched, glazed stoneware dinner plate is an example of my wheel thrown work.</p>
             </a> 
           </li>
           <li>
-            <a href="img/Gonzo-Shroom-Box.jpg">
-              <img src="img/Gonzo-Shroom-Box.jpg" alt="'Gonzo Shroom Stash Box'. This piece is an example of my hand building skills. Earthenware and acrylic paint. Gonzofest 2014.">
+            <a href="IMG/Gonzo-Shroom-Box.jpg">
+              <img src="IMG/Gonzo-Shroom-Box.jpg" alt="'Gonzo Shroom Stash Box'. This piece is an example of my hand building skills. Earthenware and acrylic paint. Gonzofest 2014.">
               <p>"Gonzo Shroom Stash Box". This piece is an example of my hand building skills. Earthenware and acrylic paint. Gonzofest 2014.</p>
             </a> 
           </li>
           <li>
-            <a href="img/Guitar.jpg">
-              <img src="img/Guitar.jpg" alt="">
+            <a href="IMG/Guitar.jpg">
+              <img src="IMG/Guitar.jpg" alt="">
               <p>I have quite a few musican friends and end up at a lot of local shows with my camera.</p>
             </a> 
           </li>
           <li>
-            <a href="img/david.jpg">
-              <img src="img/david.jpg" alt="David Jordan of Aby Laby Land.">
+            <a href="IMG/david.jpg">
+              <img src="IMG/david.jpg" alt="David Jordan of Aby Laby Land.">
               <p>David Jordan of Aby Laby Land.</p>
             </a> 
           </li>
         </ul>
-        <a href="#" class="toTop"><img src="img/rb-back-to-top-32.png" alt="Back To Top"></a>
+        <a href="#" class="toTop"><img src="IMG/rb-back-to-top-32.png" alt="Back To Top"></a>
       </section>
 
       <footer>
          
         <center>
-           <img src="img/heartscrollswirlybanner_2.jpg" class="scroll-work-bottom"> 
+           <img src="IMG/heartscrollswirlybanner_2.jpg" class="scroll-work-bottom"> 
         </center> 
-        <a href="https://www.facebook.com/StrawberryBurns"><img src="img/facebook_32.png" alt="Facebook Logo" class="social-icon"></a>
-        <a href="http://strawberryburns.deviantart.com/"><img src="img/deviantart_32.png" alt="Deviantart Logo" class="social-icon"></a>
-        <a href="https://twitter.com/StrawberryBurns"><img src="img/twitter_32.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://strawberryburns.tumblr.com/"><img src="img/tumblr_32.png" alt="Tumblr Logo" class="social-icon"></a>
+        <a href="https://www.facebook.com/StrawberryBurns"><img src="IMG/facebook_32.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="http://strawberryburns.deviantart.com/"><img src="IMG/deviantart_32.png" alt="Deviantart Logo" class="social-icon"></a>
+        <a href="https://twitter.com/StrawberryBurns"><img src="IMG/twitter_32.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://strawberryburns.tumblr.com/"><img src="IMG/tumblr_32.png" alt="Tumblr Logo" class="social-icon"></a>
         <p>&copy; 2015 Tracy Parker.</p>
       </footer>
     </div>
