--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
       <footer>
         <a href="https://www.facebook.com/StrawberryBurns"><img src="IMG/facebook_32.png" alt="Facebook Logo" class="social-icon"></a>
         <a href="http://strawberryburns.deviantart.com/"><img src="IMG/deviantart_32.png" alt="Deviantart Logo" class="social-icon"></a>
-        <a href="https://twitter.com/StrawberryBurns"><img src="IMG/twitter_32.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://strawberryburns.tumblr.com/"><img src="IMG/tumblr_32.png" alt="Tumblr Logo" class="social-icon"></a>
+        <a href="https://github.com/tracyparker"><img src="IMG/github_32.png" alt="GitHub Logo" class="social-icon"></a>
+        <a href="http://teamtreehouse.com/susanparker"><img src="IMG/Treehouse-32.png" alt="Treehouse Logo" class="social-icon"></a>
         <p>&copy; 2015 Tracy Parker.</p>
       </footer>
     </div>
