Delete FB button, add LinkedIn

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         <a href="#" class="toTop"><img src="IMG/rb-back-to-top-32.png" alt="Back To Top"></a>
       </section>
       <footer>
-        <a href="https://www.facebook.com/StrawberryBurns"><img src="IMG/facebook_32.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="https://www.linkedin.com/in/stpwebdev"><img src="img/linkedin_32.png" alt="LinkedIn Logo" class="social-icon"></a>
         <a href="http://strawberryburns.deviantart.com/"><img src="IMG/deviantart_32.png" alt="Deviantart Logo" class="social-icon"></a>
         <a href="https://github.com/tracyparker"><img src="IMG/github_32.png" alt="GitHub Logo" class="social-icon"></a>
         <a href="http://teamtreehouse.com/susanparker"><img src="IMG/Treehouse-32.png" alt="Treehouse Logo" class="social-icon"></a>
